fix: horizontal overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
+body,
+html {
+  overflow-x: clip;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition:
+    background-color 600000s 0s,
+    color 600000s 0s;
+}
+
 input[data-autocompleted] {
   background-color: transparent !important;
 }
